# NOMAD

./: .gitignore  LICENSE  example_usage.ipynb  method.md  mkdocs.yml  pyproject.toml
src/nomad/: __init__.py  nomad.py
src/nomad/utils/: constants.py  digestor.py  fasta_parser.py  graph_ops.py  header_parser.py  math_models.py  quantification_parser.py
src/nomad/utils/db/: __init__.py  db_read.py  db_write.py
src/nomad/utils/nmf/: __init__.py  averaging.py  engine.py  optimizer.py  single_fit.py  uncertainty.py  worker.py
src/nomad/utils/plotting/: __init__.py  _helpers.py  diagnostics.py  structural.py  volcano.py
tests/: conftest.py  test_nomad.py
tests/utils/: conftest.py  test_constants.py  test_diagnostics_plot.py  test_digestor.py  test_fasta_parser.py  test_graph_ops.py  test_header_parser.py  test_math_models.py  test_nmf_fit_integration.py  test_nmf_fit_max_h.py  test_nmf_fit_new.py  test_nmf_fit_unit.py  test_quantification_parser.py  test_structural_evidence.py
tests/utils/db/: __init__.py  conftest.py  test_db_read.py  test_db_write.py
tests/utils/nmf/: __init__.py  conftest.py  test_averaging.py  test_engine.py  test_optimizer.py  test_single_fit.py  test_uncertainty.py  test_worker.py
tests/utils/plotting/: __init__.py  test_diagnostics.py  test_structural.py  test_volcano.py
